# sententiam_ferre

./: .env.example  .gitignore  LICENSE  README.md  main.py  manage.py  pyproject.toml  schema.sql  start-dev.sh
core/: admin.py  models.py  permissions.py  serializers.py  test_admin_request_endpoints.py  test_chat_endpoints.py  test_comprehensive_e2e.py  test_e2e_integration.py  test_integration_join_requests.py  test_performance.py  test_properties_approval.py  test_properties_authorization.py  test_properties_chat.py  test_properties_closure.py  test_properties_decision.py  test_properties_filtering.py  test_properties_group_creator.py  test_properties_group_membership.py  test_properties_invitation.py  test_properties_item.py  test_properties_questionnaire.py  test_properties_taxonomy.py  test_properties_threshold_recalc.py  test_properties_vote.py  test_questionnaire_endpoints.py  test_security_audit.py  test_taxonomy_endpoints.py  test_trigger_functionality.py  test_vote_endpoints.py  tests.py  throttles.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_add_approval_trigger.py  0003_add_gin_index_to_decision_item.py  0004_add_vote_constraint.py  0005_fix_trigger_uuid.py  0006_add_membership_fields.py  0007_migrate_existing_membership_data.py  0008_add_membership_indexes.py  0009_rename_core_groupm_group_i_status_idx_group_membe_group_i_990501_idx_and_more.py  (+4 more)
frontend/: .env.example  MOBILE_OPTIMIZATIONS.md  index.html  package-lock.json  package.json  vite.config.js
sententiam_ferre/: asgi.py  settings.py  urls.py  wsgi.py
(+143 files in other folders)
