[project]
name = "sententiam-ferre"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "hypothesis>=6.148.2",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "requests>=2.32.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sententiam_ferre.settings"
python_files = ["test_*.py", "*_test.py"]
